--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,5 @@
-AWS_ACCESS_KEY_ID=your_aws_access_key_id
-AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_ACCESS_KEY=your_aws_access_key_id
+AWS_SECRET_KEY=your_aws_secret_access_key
 AWS_REGION=your_aws_region
-AWS_BUCKET_NAME=your_aws_bucket_name
-AWS_BUCKET_FOLDER=your_aws_bucket_folder
-LOCAL_DOWNLOAD_PATH=your_local_download_path
+S3_BUCKET_NAME=your_s3_bucket_name
+AWS_ENDPOINT=your_aws_endpoint(optional)
