--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,23 @@
 {
   "compilerOptions": {
-    "module": "es2022",
-    "target": "es2017",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2021",
     "rootDir": ".",
-    "outDir": "build",
+    "outDir": "./build",
     "sourceMap": true,
-    "moduleResolution": "node",
+    "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "lib": ["es2022", "dom"],
+    "lib": ["ESNext", "dom"],
     "types": ["node"],
     "typeRoots": ["node_modules/@types"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     },
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
@@ -24,5 +26,5 @@
   },
   "extends": "./node_modules/gts/tsconfig-google.json",
   "include": ["src/**/*.ts", "test/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules/**/*","build/**/*"],
 }
