--- a/package.json
+++ b/package.json
@@ -32,11 +32,18 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint",
+    "build": "tsc",
+    "format": "prettier --write 'src/**/*.{ts,tsx}'",
+    "types": "tsc --noEmit",
+    "docs": "npx typedoc --out docs ./src",
     "start": "node build/src/index.js $1 $2"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
+    "eslint": "^7.32.0",
     "gts": "^3.1.1",
+    "prettier": "^2.8.7",
+    "typedoc": "^0.24.4",
     "typescript": "~5.0.4"
   },
   "dependencies": {
