--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run lint",
+    "posttest": "npm run lint --fix",
     "build": "tsc",
     "format": "prettier --write 'src/**/*.{ts,tsx}'",
     "types": "tsc --noEmit",
