--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint --fix",
-    "build": "tsc",
+    "build": "npm run clean && npm run compile",
     "format": "prettier --write 'src/**/*.{ts,tsx}'",
     "types": "tsc --noEmit",
     "docs": "npx typedoc --out docs ./src",
