Added custom logging

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ AWS_SECRET_KEY=your_aws_secret_access_key
 AWS_REGION=your_aws_region
 S3_BUCKET_NAME=your_s3_bucket_name
 AWS_ENDPOINT=your_aws_endpoint(optional)
+LOG_DIR=your_log_directory(optional)
