--- a/package.json
+++ b/package.json
@@ -48,8 +48,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.321.1",
+    "@elastic/ecs-winston-format": "^1.3.1",
+    "@types/winston": "^2.4.4",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "winston": "^3.8.2",
+    "winston-elasticsearch": "^0.17.2",
+    "winston-transport": "^4.5.0"
   }
 }
