--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "npm run pretest && npm run start test downloads && npm run posttest",
     "lint": "gts lint",
     "clean": "gts clean",
-    "compile": "tsc",
+    "compile": "npx tsc",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "node build/src/test-upload.js",
@@ -43,16 +43,17 @@
     "eslint": "^8.42.0",
     "gts": "^3.1.1",
     "prettier": "^2.8.8",
-    "typescript": "~5.1.3"
     "typedoc": "^0.24.8",
-    "typescript": "~5.0.4"
+    "typescript": "~5.1.3"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.352.0",
     "@elastic/ecs-winston-format": "^1.3.1",
     "@types/winston": "^2.4.4",
+    "aws-sdk": "^2.1397.0",
     "dotenv": "^16.1.4",
     "fs": "^0.0.1-security",
+    "logform": "^2.5.1",
     "stream": "^0.0.2",
     "winston": "^3.9.0",
     "winston-elasticsearch": "^0.17.2",
